--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CocoTools"
 uuid = "769c873f-dd98-46d4-bd12-4e21f6b68b60"
 authors = ["Ciro B Rosa <ciro.rosa@alumni.usp.br>"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [compat]
 julia = "1.9"
