--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "769c873f-dd98-46d4-bd12-4e21f6b68b60"
 authors = ["Ciro B Rosa <ciro.rosa@alumni.usp.br>"]
 version = "0.1.0"
 
+[deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+
 [compat]
 julia = "1.9"
 
