--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 
 [compat]
 julia = "1.10 - 1.12"
-DataStructures = "0.18"
+DataStructures = "0.18 - 0.19"
 Downloads = "1.6"
 
 [extras]
