--- a/Project.toml
+++ b/Project.toml
@@ -1,16 +1,22 @@
 name = "CocoTools"
 uuid = "769c873f-dd98-46d4-bd12-4e21f6b68b60"
-authors = ["Ciro B Rosa <ciro.rosa@alumni.usp.br>"]
 version = "0.1.6"
+authors = ["Ciro B Rosa <ciro.rosa@alumni.usp.br>"]
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 
 [compat]
-julia = "1.10 - 1.12"
+DataFrames = "1.8.1"
 DataStructures = "0.18 - 0.19"
 Downloads = "1.6"
+HTTP = "1.10.19"
+JSON3 = "1.14.3"
+julia = "1.10 - 1.12"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
