--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ version = "0.1.6"
 authors = ["Ciro B Rosa <ciro.rosa@alumni.usp.br>"]
 
 [deps]
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
@@ -11,6 +12,7 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 
 [compat]
+Colors = "0.13"
 DataFrames = "1.8"
 DataStructures = "0.18 - 0.19"
 Downloads = "1.6"
