--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 
 [compat]
-Colors = "0.13"
+Colors = "0.12 - 0.13"
 DataFrames = "1.8"
 DataStructures = "0.18 - 0.19"
 Downloads = "1.6"
